--- a/app/views/spree/taxons/splash.html.erb
+++ b/app/views/spree/taxons/splash.html.erb
@@ -34,7 +34,7 @@ unless bundle_variant_list.blank?
 	<tr class="<%= cycle('', 'alt') %>">
 	  <td data-hook="cart_item_image">
 	    <% if variant.images.length == 0 %>
-	      <%= link_to medium_image(variant.product), variant.product if variant.product.images.count > 0 %>
+	      <%= link_to small_image(variant.product), variant.product if variant.product.images.count > 0 %>
 	    <% else %>
 	      <%= link_to image_tag(variant.images.first.attachment.url(:small)), variant.product %>
 	    <% end %>
